--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ m4_divert_pop([HELP_ENABLE])
 AC_ARG_VAR(COQC, [Coq compiler command [coqc]])
 AC_CHECK_TOOL(COQC, coqc)
 
-AC_ARG_VAR(COQDEP, [Coq compiler command [coqdep]])
+AC_ARG_VAR(COQDEP, [Coq dependency analyzer command [coqdep]])
 AC_CHECK_TOOL(COQDEP, coqdep)
 
 if test "$libdir" = '${exec_prefix}/lib'; then
