Partial of proof of FLX_format_satisfies_any.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,7 @@ FILES = \
 	Flocq_Raux.v \
 	Flocq_defs.v \
 	Flocq_rnd_FIX.v \
+	Flocq_rnd_FLX.v \
 	Flocq_rnd_ex.v \
 	Flocq_rnd_prop.v
 
@@ -13,7 +14,7 @@ datadir = $(libdir)
 
 .v.vo:
 	@echo COQC $<
-	@$(COQC) $(COQRFLAG) $<
+	@$(COQC) $(COQRFLAG) -dont-load-proofs $<
 
 .v.vd:
 	@echo COQDEP $<
