Added missing file.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,11 @@
 FILES = \
-	Flocq_Raux.v \
 	Flocq_defs.v \
 	Flocq_float_prop.v \
-	Flocq_rnd_FIX.v \
-	Flocq_rnd_FLX.v \
+	Flocq_Raux.v \
 	Flocq_rnd_ex.v \
+	Flocq_rnd_FIX.v \
+	Flocq_rnd_FLT.v \
+	Flocq_rnd_FLX.v \
 	Flocq_rnd_prop.v
 
 data_DATA = $(FILES:=o)
