Added some facts about location and rounding.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,6 +11,7 @@ FILES = \
 	Core/Fcore_rnd_ne.v \
 	Core/Fcore_ulp.v \
 	Core/Fcore.v \
+	Calc/Fcalc_bracket.v \
 	Calc/Fcalc_ops.v \
 	Prop/Fprop_nearest.v
 
