--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ FILES = \
 	Core/Fcore.v \
 	Calc/Fcalc_bracket.v \
 	Calc/Fcalc_digits.v \
+	Calc/Fcalc_div.v \
 	Calc/Fcalc_ops.v \
 	Prop/Fprop_nearest.v
 
