Added rounding for FLX formats.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ FILES = \
 	Calc/Fcalc_ops.v \
 	Calc/Fcalc_round.v \
 	Calc/Fcalc_round_FIX.v \
+	Calc/Fcalc_round_FLX.v \
 	Calc/Fcalc_sqrt.v \
 	Prop/Fprop_nearest.v
 
