Proved that the error of multiplication is an FP number in FLX.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,6 +18,7 @@ FILES = \
 	Calc/Fcalc_round.v \
 	Calc/Fcalc_round_FIX.v \
 	Calc/Fcalc_sqrt.v \
+	Prop/Fprop_mult_error.v \
 	Prop/Fprop_nearest.v \
 	Prop/Fprop_Sterbenz.v
 
