Added theorems on relative error.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,7 @@ FILES = \
 	Prop/Fprop_mult_error.v \
 	Prop/Fprop_nearest.v \
 	Prop/Fprop_plus_error.v \
+	Prop/Fprop_relative.v \
 	Prop/Fprop_Sterbenz.v
 
 data_DATA = $(FILES:=o)
