--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ FILES = \
 	Prop/Fprop_div_sqrt_error.v \
 	Prop/Fprop_Sterbenz.v \
 	Appli/Fappli_Axpy.v \
+	Appli/Fappli_IEEE.v \
 	Appli/Fappli_sqrt_FLT_ne.v
 
 EXTRA_DIST = $(FILES)
