--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ FILES = \
 	Prop/Fprop_relative.v \
 	Prop/Fprop_Sterbenz.v \
 	Appli/Fappli_IEEE.v \
+	Appli/Fappli_IEEE_bits.v \
 	Appli/Fappli_sqrt_FLT_ne.v
 
 EXTRA_DIST = $(FILES)
