Fappli_rnd_odd is OK (get rid of Monotone)

--- a/Remakefile.in
+++ b/Remakefile.in
@@ -25,6 +25,7 @@ FILES = \
 	Prop/Fprop_plus_error.v \
 	Prop/Fprop_relative.v \
 	Prop/Fprop_Sterbenz.v \
+	Appli/Fappli_rnd_odd.v \
 	Appli/Fappli_IEEE.v \
 	Appli/Fappli_IEEE_bits.v
 
