Avoid a conflict between the "INSTALL" file and the "install" target on case-insensitive filesystems.

--- a/Remakefile.in
+++ b/Remakefile.in
@@ -31,6 +31,8 @@ FILES = \
 
 OBJS = $(addprefix src/,$(addsuffix o,$(FILES)))
 
+.PHONY: all clean dist doc install
+
 all: $(OBJS)
 
 Remakefile: Remakefile.in config.status
