Added average example (from Sterbenz's book)

--- a/Remakefile.in
+++ b/Remakefile.in
@@ -35,6 +35,7 @@ OBJS = $(addprefix src/,$(addsuffix o,$(FILES)))
 EXAMPLES = \
 	Double_round_beta_odd.v \
 	Sqrt_sqr.v \
+	average.v \
 	Triangle.v
 
 EOBJS = $(addprefix examples/,$(addsuffix o,$(EXAMPLES)))
