Add the example for the FMA-based division of 16-bit unsigned integers.

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@ config.log
 config.status
 configure
 install-sh
+lia.cache
 Remakefile
 .remake
 remake
 remake.exe
-html
+html/
 src/Flocq_version.v
 *.vo
 *.glob
