--- a/Remakefile.in
+++ b/Remakefile.in
@@ -28,9 +28,9 @@ FILES = \
 	Prop/Double_rounding.v \
 	IEEE754/Binary.v \
 	IEEE754/Bits.v \
-	Translate/Pff.v \
-	Translate/Ftranslate_flocq2Pff.v \
-	Translate/Missing_theos.v
+	Pff/Pff.v \
+	Pff/Pff2FlocqAux.v \
+	Pff/Pff2Flocq.v
 
 OBJS = $(addprefix src/,$(addsuffix o,$(FILES)))
 
@@ -90,16 +90,14 @@ install:
 	prefix=@prefix@
 	exec_prefix=@exec_prefix@
 	mkdir -p @libdir@
-	for d in Core Calc Prop IEEE754 Translate; do mkdir -p @libdir@/$d; done
+	for d in Core Calc Prop IEEE754 Pff; do mkdir -p @libdir@/$d; done
 	for f in $(OBJS); do cp $f @libdir@/${f#src/}; done
 	( cd src && find . -type d -name ".coq-native" -exec cp -RT "{}" "@libdir@/{}" \; )
 
 EXTRA_DIST = \
 	configure
 
-REMOVE_FROM_DIST = \
-	examples/Axpy.v \
-	src/Translate/
+REMOVE_FROM_DIST =
 
 dist: $(EXTRA_DIST)
 	PACK=@PACKAGE_TARNAME@-@PACKAGE_VERSION@
