--- a/configure.in
+++ b/configure.in
@@ -15,6 +15,8 @@ m4_divert_pop([HELP_ENABLE])
 
 AC_PROG_CXX
 
+AC_DEFUN([AX_VERSION_GE], [AS_VERSION_COMPARE([$1],[$2],[$4],[$3],[$3])])
+
 AC_ARG_VAR(COQBIN, [path to Coq executables [empty]])
 if test ${COQBIN##*/}; then COQBIN=$COQBIN/; fi
 
@@ -31,21 +33,13 @@ AC_MSG_RESULT([$COQC])
 
 AC_MSG_CHECKING(Coq version)
 coq_version=`$COQC -v | grep version | sed -e 's/^.*version \([[0-9.]]*\).*$/\1/'`
-maj=`echo "$coq_version" | cut -d . -f 1`
-min=`echo "$coq_version" | cut -d . -f 2`
-if test "v$maj" = "v" -o "v$min" = "v" ; then
-  AC_MSG_ERROR([Unknown Coq version $coq_version])
-fi
-if test "$maj" -lt "8" || test "$maj" = "8" -a "$min" -lt "7" ; then
-  AC_MSG_ERROR([Coq version must be at least 8.7 (you have version $coq_version).])
-fi
+AX_VERSION_GE([$coq_version], 8.7, [],
+  [AC_MSG_ERROR([must be at least 8.7 (you have version $coq_version).])])
 AC_MSG_RESULT($coq_version)
 
-if test "$maj" = "8" -a "$min" -lt "11" ; then
-  PRIM_FLOAT=""
-else
-  PRIM_FLOAT="PrimitiveFloats/SpecLayer.v PrimitiveFloats/NativeLayer.v"
-fi
+AX_VERSION_GE([$coq_version], 8.11,
+  [PRIM_FLOAT="PrimitiveFloats/SpecLayer.v PrimitiveFloats/NativeLayer.v"],
+  [PRIM_FLOAT=""])
 AC_SUBST(PRIM_FLOAT)
 
 AC_ARG_VAR(COQDEP, [Coq dependency analyzer command [coqdep]])
