Add module IEE754.SpecFloat
By conditional compilation, this is a Module Import of
Coq.Floats.SpecFloat with Coq >= 8.11 or a copy SpecFloatCopy
otherwise.

--- a/Remakefile.in
+++ b/Remakefile.in
@@ -26,6 +26,8 @@ FILES = \
 	Prop/Sterbenz.v \
 	Prop/Round_odd.v \
 	Prop/Double_rounding.v \
+	@PRIM_FLOAT@ \
+	IEEE754/SpecFloat.v \
 	IEEE754/Binary.v \
 	IEEE754/Bits.v \
 	Pff/Pff.v \
