--- a/configure.in
+++ b/configure.in
@@ -37,6 +37,16 @@ AX_VERSION_GE([$coq_version], 8.7, [],
   [AC_MSG_ERROR([must be at least 8.7 (you have version $coq_version).])])
 AC_MSG_RESULT($coq_version)
 
+AX_VERSION_GE([$coq_version], 8.11,
+  [PRIM_FLOAT=""],
+  [PRIM_FLOAT="IEEE754/SpecFloatCopy.v"])
+AC_SUBST(PRIM_FLOAT)
+
+AX_VERSION_GE([$coq_version], 8.11,
+  [SPEC_FLOAT_MODULE="Coq.Floats.SpecFloat"],
+  [SPEC_FLOAT_MODULE="SpecFloatCopy"])
+AC_SUBST(SPEC_FLOAT_MODULE)
+
 AC_ARG_VAR(COQDEP, [Coq dependency analyzer command [coqdep]])
 AC_MSG_CHECKING([for coqdep])
 if test ! "$COQDEP"; then
@@ -76,5 +86,5 @@ MINGW*)
 	;;
 esac
 
-AC_CONFIG_FILES([Remakefile src/Version.v])
+AC_CONFIG_FILES([Remakefile src/Version.v src/IEEE754/SpecFloat.v])
 AC_OUTPUT
