--- a/configure.in
+++ b/configure.in
@@ -38,7 +38,7 @@ AX_VERSION_GE([$coq_version], 8.7, [],
 AC_MSG_RESULT($coq_version)
 
 AX_VERSION_GE([$coq_version], 8.11,
-  [PRIM_FLOAT=""],
+  [PRIM_FLOAT="IEEE754/PrimFloat.v"],
   [PRIM_FLOAT="IEEE754/SpecFloatCopy.v"])
 AC_SUBST(PRIM_FLOAT)
 
